# kml2kmz

./: CMakeLists.txt  README.md
lib/ui/: kmltool.cpp  kmltool.fbp  kmltool.h
src/: kmltool_gui.cpp  reader.cpp  reader.h
